[package]
authors = ["Mike Panetta <panetta.mike@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "discof3"
version = "0.1.0"

[dependencies]
bare-metal = { version = "0.2.4", features = ["const-fn"] }
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
vcell = "0.1.0"

# Uncomment for the panic example.
panic-semihosting = "0.5.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f0]
version = "0.4.0"
features = ["stm32f0x2", "rt"]

[dependencies.stm32f0xx-hal]
#version = "0.7.0"
path = "../stm32f0xx-hal"
features = ["stm32f042", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "discof3"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.cast]
default-features = false
version = "0.2.2"
